# dp-flash-attention

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  ARCHITECTURE.md  AUTONOMOUS_RESEARCH_BREAKTHROUGH_COMPLETION_REPORT.md  AUTONOMOUS_SDLC_COMPLETION_FINAL_REPORT.md  AUTONOMOUS_SDLC_FINAL_REPORT.md  AUTONOMOUS_SDLC_QUALITY_REPORT.json  AUTONOMOUS_SDLC_QUALITY_REPORT.md  AUTONOMOUS_SDLC_REPORT.md  BACKLOG.md  BREAKTHROUGH_RESEARCH_PUBLICATION.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_COMPLETE.md  Dockerfile  Dockerfile.prod  FINAL_AUTONOMOUS_SDLC_COMPLETION_REPORT.md  FINAL_AUTONOMOUS_SDLC_REPORT.md  GENERATION_4.1_COMPLETION_REPORT.md  GENERATION_5_COMPLETION_REPORT.md  Makefile  PRODUCTION_DEPLOYMENT_GUIDE.md  PROGRESSIVE_QUALITY_GATES_ENHANCEMENT_REPORT.md  PROJECT_CHARTER.md  README.md  RESEARCH_ENHANCED_DEPLOYMENT_GUIDE.md  SDLC_COMPLETION_REPORT.md  SECURITY.md  TERRAGON_AUTONOMOUS_SDLC_FINAL_REPORT.md  TERRAGON_SDLC_COMPLETION_REPORT.md  advanced_research_validation.py  autonomous_enhancement_engine.py  autonomous_sdlc_quality_gates.py  deployment_config.py  docker-compose.prod.yml  docker-compose.yml  (+40 more)
.devcontainer/: Dockerfile  devcontainer.json  setup.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  project-metrics.json  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  privacy_issue.yml
.terragon/: README.md  autonomous-executor.py  config.yaml  execution-history.json  execution-summary-20250801-153515.md  performance-metrics.json  performance-monitor.py  scheduler.sh  security-analysis.json  security-analyzer.py  value-discovery.py  value-metrics.json
config/: enhancement.json  production.json
deploy/: kubernetes-enterprise.yaml  kubernetes.yaml
deployment/: Dockerfile  deploy_docker.sh  deploy_k8s.sh  deployment.yaml  deployment_summary.json  docker-compose.yml  dp_flash_attention_rules.yml  env.template  grafana_dashboard.json  hpa.yaml  network-policy.yaml  production_checklist.md  production_deployment.sh  prometheus.yml  requirements.txt  security_policy.md  zero_downtime_deployment.py
deployment/development/: deployment.yaml  network-policy.yaml  service.yaml
deployment/production/: deployment.yaml  hpa.yaml  network-policy.yaml  service.yaml
deployment/staging/: deployment.yaml  network-policy.yaml  service.yaml
docs/: DEVELOPMENT.md  ROADMAP.md  SETUP_REQUIRED.md
docs/adr/: 0000-use-architecture-decision-records.md  0001-cuda-kernel-architecture.md  0002-privacy-accounting-framework.md
docs/compliance/: SBOM-policy.md  SOC2-compliance.md
docs/monitoring/: README.md
docs/operations/: disaster-recovery.md  incident-response.md
docs/workflows/: DEPLOYMENT.md  README.md  security-scan-workflow.md
docs/workflows/templates/: ci.yml  security.yml
dp_env/: pyvenv.cfg
dp_env_new/: pyvenv.cfg
enhancement_reports/: enhancement_report_20250815_145753.md
federated_reports/: federation_report_20250815_145848.md
monitoring/: advanced_privacy_metrics_dashboard.py  docker-compose.yml  dp_flash_attention_rules.yml  grafana_dashboard.json  observability.yml  privacy-metrics.py  prometheus.yml
monitoring/grafana/dashboards/: privacy-dashboard.json
monitoring/rules/: privacy-alerts.yml
quantum_privacy_reports/: quantum_report_20250815_145810.md
research_outputs/: research_publication_1755030901.md  research_results_1755030901.json
robustness_outputs/: robustness_report_1755031085.md  robustness_results_1755031085.json
scaling_outputs/: scaling_analysis_1755031364.json  scaling_report_1755031364.md
scripts/: check_privacy_params.py  cuda_security_check.py  entrypoint.sh  setup_dev.sh
security_reports/: security_report_20250815_145916.md
src/dp_flash_attention/: __init__.py  advanced_research_engine.py  advanced_research_mechanisms.py  autonomous_improvements.py  autonomous_monitoring_system.py  autonomous_research_pipeline.py  autonomous_self_improvement.py  autoscaling.py  benchmarking.py  cli.py  comparative_research_framework.py  concurrent.py  config.py  core.py  deployment.py  diagnostics.py  distributed.py  enhanced_dp_flash_attention.py  enhanced_global_compliance.py  error_handling.py  federated_learning_coordinator.py  functional.py  generation5_adaptive_privacy.py  generation5_edge_optimization.py  generation5_multimodal_attention.py  generation5_quantum_privacy.py  global_deployment_engine.py  globalization.py  helper_functions.py  kernels.py  logging_utils.py  monitoring.py  optimization.py  performance_tuning.py  privacy.py  quantum_privacy_mechanisms.py  quantum_resistant_privacy.py  research.py  security.py  standalone_validation.py  (+3 more)
tests/: __init__.py
tests/benchmarks/: __init__.py  test_performance.py
tests/integration/: __init__.py
tests/mutation/: conftest.py  test_privacy_mutations.py
tests/performance/: test_benchmarks.py
tests/privacy/: __init__.py  test_privacy_guarantees.py
tests/unit/: __init__.py  test_core.py
